# uxok

./: .gitignore  .pre-commit-config.yaml  .tool-versions  2026-07-02-deep-audit.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.claude/agents/: architecture-analyzer.md  cicd-infrastructure-engineer.md  documentation-auditor.md  python-framework-coder.md  python-test-coder.md  technical-writer.md
.claude/skills/developer-documentation-blueprint-SKILL/: SKILL.md
.claude/skills/git-commit-helper-SKILL/: SKILL.md
.claude/skills/public-document-blueprint-SKILL/: SKILL.md
.claude/skills/writing-style-SKILL/: SKILL.md
.claude/workflows/: doc-regenerate.js  doc-update.js
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: DOCS-CHANGELOG.md  index.md
docs/agent_data/compliance-auditor/verifications/: verify-2026-06-26-001.md  verify-2026-06-26-002.md  verify-2026-06-26-003.md
docs/explanation/: architecture-overview.md  capability-system.md  event-system.md  framework-philosophy.md  hook-system.md  index.md  plugin-architecture.md  secure-capability-access.md  state-management.md  tick-system.md
docs/how-to/: how-to-boot-a-plugin-graph-in-order.md  how-to-declare-plugin-configuration.md  how-to-execute-hooks.md  how-to-extend-plugin-base.md  how-to-lock-down-capability-access.md  how-to-manage-core-lifecycle.md  how-to-manage-plugin-dependencies.md  how-to-probe-a-plugin-before-admission.md  how-to-publish-events.md  how-to-register-and-manage-plugins.md  how-to-register-hook-handlers.md  how-to-resolve-a-live-plugin-instance.md  how-to-shut-down-gracefully.md  how-to-subscribe-to-events.md  how-to-use-capability-policies.md  how-to-use-error-handler-decorator.md  how-to-use-hot-reload.md  how-to-use-plugin-collections.md  how-to-use-plugin-configuration.md  how-to-use-tags-for-provider-selection.md  how-to-use-tick-based-scheduling.md  how-to-work-with-capabilities.md  index.md
docs/manifests/: API.md  FRAMEWORK_PHILOSOPHY.md  KERNEL_ARCHITECTURE.md
docs/proposals/: 0001-secure-capabilities.md  0002-resolution-grants.md  0003-admission-probe-and-gating.md  0003-downloaded-structural-interpreters.md  0003-review-kernel-boundary.md  0004-transitive-attenuation.md  0005-admission-and-attenuation-spec.md  0006-attenuated-check-plugin.md  0007-declarative-constitution.md
docs/tutorials/: configuration.md  deterministic-conversations.md  getting-started.md  hot-reload.md  index.md  locking-it-down.md  time-and-the-tick.md  watching-the-graph.md
examples/: note-on-examples.md
examples/example_host/: __init__.py  agent.py  conductor.py  grumpy_persona.py  host.py  model.py  persona.py  roster.py  sensor.py  shutdown.py  supervisor.py  terse_model.py  watcher.py
examples/getting_started/: __init__.py  agent.py  host.py  model.py
plugins/example_host/: __init__.py  alert_format.py  alert_log.py  host.py  sensor.py  shutdown.py  thresholds.py
plugins/supervisor/: __init__.py  supervisor_plugin.py
scripts/: api_inventory.py  bump_version.py  check_api_changelog_coupling.py  gen_ref_pages.py  rename_project.py  update_docs.py
scripts/dev_utilities/: bump_version.py  regen_docs.py
src/uxok/: __init__.py  _config_validation.py  errors.py
src/uxok/core/: __init__.py  _capability_facet.py  _capability_system.py  _core.py  _core_facet.py  _hot_reload.py  _loader.py  _shared_utils.py  _state_manager.py
src/uxok/events/: __init__.py  _bus.py  _subscriptions.py
src/uxok/hooks/: __init__.py  _cache.py  _system.py
src/uxok/plugin/: __init__.py  _base.py  _decorators.py  _naming.py  config_field.py
src/uxok/protocols/: __init__.py  _types.py  capability_system.py  config.py  core.py  events.py  hooks.py  plugin.py  registry.py
src/uxok/registry/: __init__.py  _plugin_collection_service.py  _plugin_proxy.py  _plugin_view.py  _resolve.py  impl.py
src/uxok/timing/: __init__.py  _clock.py  _scheduler.py
src/uxok/utils/: __init__.py  _capability_utils.py  _formatting.py  _helpers.py  async_primitives.py
tests/: conftest.py  fake_time.py  helpers.py  state_machines.py  strategies.py  test_admission_probe.py  test_api_constitution.py  test_blocked_registration.py  test_capability_system.py  test_concurrency.py  test_core_caching.py  test_core_lifecycle.py  test_decorators.py  test_dynamic_registration.py  test_emit_scheduling.py  test_emit_source.py  test_event_bus.py  test_example_host.py  test_getting_started.py  test_hook_system.py  test_hooks_through_core.py  test_imports.py  test_load_plugin.py  test_load_plugins.py  test_plugin_config.py  test_plugin_lifecycle.py  test_plugin_metadata.py  test_plugin_view_introspection.py  test_protocols.py  test_registration_rejections.py  test_registry.py  test_registry_block_race.py  test_reload_on_stop.py  test_sealed_capabilities.py  test_sealed_return_guard.py  test_secure_capabilities.py  test_shared_utils.py  test_state_manager.py  test_stop_failure_paths.py  test_subscriptions.py  (+6 more)
tests/chaos/: __init__.py  test_failure_scenarios.py
tests/concurrency/: __init__.py  test_concurrent_operations.py
tests/integration/: __init__.py  test_hot_reload.py  test_nonblocking_workflows.py  test_plugin_caching.py  test_real_workflows.py
tests/performance/: README.md  __init__.py  test_high_plugin_count_stress.py  test_latency_percentiles.py
tests/properties/: conftest.py  hypothesis_config.py  test_async_primitives_properties.py  test_core_basic.py  test_core_orchestration_properties.py  test_decorators_properties.py  test_error_recovery_state_machine.py  test_event_bus_state_machine.py  test_event_system.py  test_hook_system_state_machine.py  test_plugin_blocking_properties.py  test_plugin_manager_properties.py  test_plugin_system.py  test_plugin_view_properties.py  test_reload_state_machine.py  test_timing_state_machine.py
(+2 files in other folders)
